Ensure the user combobox in the greeter remains readable

--- a/gtk-3.0/apps/lightdm-gtk-greeter.css
+++ b/gtk-3.0/apps/lightdm-gtk-greeter.css
@@ -75,6 +75,7 @@
 #login_window GtkComboBox .button:hover:focus,
 #login_window GtkComboBox .button:active:focus,
 #login_window GtkComboBox .button:active:hover:focus {
+    color: @lightdm_fg_color;
     padding: 0;
     background: none;
     border-style: none;                                      
@@ -85,6 +86,7 @@
 #login_window GtkComboBox .button:hover:focus,
 #login_window GtkComboBox .button:active:focus,
 #login_window GtkComboBox .button:active:hover:focus {
+    color: @lightdm_fg_color;
     box-shadow: inset 1px 0 alpha(@theme_selected_bg_color, 0.6),
                 inset -1px 0 alpha(@theme_selected_bg_color, 0.6),
                 inset 0 1px alpha(@theme_selected_bg_color, 0.6),
